stackoverflow.com: fix top bar unsticking.

--- a/stackoverflow.com/stackoverflow.css
+++ b/stackoverflow.com/stackoverflow.css
@@ -8,7 +8,7 @@
     domain(stackexchange.com)
 {
 
-    .new-topbar, .top-bar {
+    .s-topbar {
         position: absolute !important;
         margin-top: 0;
     }
